--- a/_posts/general/2020-09-19-fastapi.md
+++ b/_posts/general/2020-09-19-fastapi.md
@@ -3,7 +3,7 @@ title: Let's talk about FastAPI
 categories:
 - Microservices
 layout: post
-aside: false
+aside: true
 excerpt: A look at FastAPI, the latest Python based API framework, what it offers and how it helps in simplifying development.
 ---
 When it comes to writing Web APIs in Python, there have always been a significant number of choices, and some of the most popular ones being [Django Rest Framwork (DRF)](https://www.django-rest-framework.org/) and [Flask](https://flask.palletsprojects.com/en/1.1.x/). Both these tools are powerful in their own way and I have been using both frequently over the past few years. I had been so comfortable that I never really looked for another alternative after a while. Recently though, I have been convinced that it's time for a change. The reason: [FastAPI](https://fastapi.tiangolo.com/).
