Removed book typo

--- a/_posts/tbs/2020-11-24-prologue.md
+++ b/_posts/tbs/2020-11-24-prologue.md
@@ -12,7 +12,7 @@ excerpt: An introduction to a new series that looks at how advances, both in har
 <!-- more -->
 The need to communicate, to tell stories, pre-dates the oldest technologies. **Rock art**, existed long before the first languages. An argument could easily be made that languages are a "by-product" of this need to tell stories. A more fascinating aspect though, is how tech ties into all this.
 
-From hearing, to reading and seeing, to creating our own story as it unfolds, the Art of Storytelling has come a long way. A lot of it is made possible due to some amazing tech behind the scenes. These technical marvels were initially mostly mechanical in nature but soon more digital.fiction vs non fiction books ever printed
+From hearing, to reading and seeing, to creating our own story as it unfolds, the Art of Storytelling has come a long way. A lot of it is made possible due to some amazing tech behind the scenes. These technical marvels were initially mostly mechanical in nature but soon more digital.
 
 ## A bit of history
 Now, I am not a historian but, tracing this evolution - of storytelling and tech - is quite straightforward, atleast in the beginning. Before the first recognized languages, we had rock art. Essentially cave paintings that told some story - significant events at the time or myths. Soon, the first glimpses of language was created in a pictorial form - **hieroglyphs**. 
