--- a/_posts/tbs/2020-11-24-prologue.md
+++ b/_posts/tbs/2020-11-24-prologue.md
@@ -3,7 +3,7 @@ title: The Tech behind Storytelling - Prologue
 categories:
 - TBS
 layout: post
-aside: false
+aside: true
 permalink: blog/tbs/:title/
 excerpt: An introduction to a new series that looks at how advances, both in hardware and software, have made storytelling more interesting and immersive, through the eyes of a passionate storyteller who also happens to be an engineer.
 ---
