--- a/404.md
+++ b/404.md
@@ -7,6 +7,7 @@ permalink: /404.html
 
 ##  The Page you are looking for doesn't exist in this url anymore
 
+### We can still find that page!
 It has probably moved to the sub-url **`www.keshavvignesh.com/blog`**. This was a recent change and all blog posts now reside here.
 
 So, if you were looking for **`www.keshavvignesh.com/linting`**, for example, it can now be found at **`www.keshavvignesh.com/blog/linting`**
