added the list hyperlinks

--- a/_posts/watchlist/2020-12-30-shows-2020.md
+++ b/_posts/watchlist/2020-12-30-shows-2020.md
@@ -9,6 +9,8 @@ excerpt: A list of my favourite shows that I discovered in 2020!
 This year was - out of the many different ways to describe this year - definitely the year of the streaming. We were stuck in wildly different situations and most of us were lucky enough to have this medium of escape. A significant part of what we ended up streaming were TV Shows / Web Series. 
 
 This is the list of the best shows that I discovered this year - some new, some long overdue in my watchlist and others that had a new season this year. So, in no particular order:
+
+* Watchlist.
 {:toc}
 
 ##### The Wire (2002 - 2008)
