changed watchlist to table of contents

--- a/_posts/watchlist/2020-12-30-shows-2020.md
+++ b/_posts/watchlist/2020-12-30-shows-2020.md
@@ -10,7 +10,7 @@ This year was - out of the many different ways to describe this year - definitel
 
 This is the list of the best shows that I discovered this year - some new, some long overdue in my watchlist and others that had a new season this year. So, in no particular order:
 
-* Watchlist.
+* Table of contents.
 {:toc}
 
 ##### The Wire (2002 - 2008)
