added queen and succession to the list

--- a/_posts/watchlist/2020-12-30-shows-2020.md
+++ b/_posts/watchlist/2020-12-30-shows-2020.md
@@ -40,6 +40,10 @@ _Streaming on Netflix_
 {% include video.html id="CDrieqwSdgI" title="The Queen's Gambit Trailer" %}
 This, totally deserving breakout hit of 2020, is a limited series that follows the life of a young female chess prodigy, as she navigates the chess world of the 50s and 60s. There is a lot to love about this show. Other than the brilliant performances and period design, there were two things that stood out to me storywise: the way it beautifully captures the various emotions surrounding the game of chess and the underdog/superhero template of the narration. Chess was never this exciting to watch!
 
+##### Succession (2018 - )
+_Streaming on Disney+ Hotstar_
+{% include video.html id="OzYxJV_rmE8" title="Succession Trailer" %}
+What if Game of Thrones happened in Present day New York City in the Media Industry? The show can kind of be described as Game of Thrones meets Arrested Development meets Billions. The show follows the Roy Family as questions arise on who will be the next CEO of their global media empire. The show is categorised as a "sattire-comedy" but the show has many smart twists and things do get dark at times.
 
 ##### The Good Place (2016 - 2020)
 _Streaming on Netflix_
@@ -82,6 +86,11 @@ _Streaming on Amazon Prime_
 The core premise of this show relies on this question - What if you could continue to live after death, by uploading your consciousness into a Virtual Reality Afterlife? But unlike _The Wire_, this is not a serious drama. This show is quirky, fun and shows a very plausible future based on the tech that we currently have. And on top of it all, there is a murder mystery that requires cooperation from people in the real and virtual worlds.
 
 The show does have a few shortcomings and at times it leaves you with a feeling of "that concept had a lot more potential". But it is largely entertaining and I am eagerly waiting for the next season!
+
+##### Queen (2019)
+_Streaming on MX Player_
+{% include video.html id="7ZnGtM5g9xI" title="Queen Trailer" %}
+Queen is loosely based on the life of the former Chief Minister of Tamil Nadu J. Jayalalithaa. But this is not a documentary. The main character is called Shakthi Seshadri. The show tracks her life from her childhood days, to her cinema and then her political entry. The show is a dramatized narrative that is staged as a reflective look back over her life through the course of an interview. The show does play it safe but this is an engaging underdog story that is worth a watch.
 
 ##### Delhi Crime (2019)
 _Streaming on Netflix_
