added soul to the list

--- a/_posts/watchlist/2020-12-31-movies-2020.md
+++ b/_posts/watchlist/2020-12-31-movies-2020.md
@@ -111,6 +111,11 @@ _Streaming on Sony Liv_
 {% include video.html id="YqNYrYUiMfg" title="1917 Trailer" %}
 This World War 1 story was marketed as a "Single Shot Film". While it might look like a gimmick, this format really enhanced the overall experience. The film is a collection of really long sequences that have been skilfully edited to give a feel of a single shot. It will be really difficult to spot where one sequence ends and the next begins and after a while, you stop caring because the plot is equally exciting!
 
+##### Soul (English)
+_Streaming on Disney+ Hotstar_<br/>
+This heartwarming tale about the exploration of life's purpose hits most of the right notes. This film feels like a nice companion piece to one of Pixar's earlier releases - _Inside Out_. I don't want to say much about this film as it would be more fun to discover it yourself. Skip the trailer and go in blind. The film has a few nice surprises.
+{% include video.html id="xOsLIiBStEs" title="Soul Trailer" %}
+
 ##### AK vs AK (Hindi)
 _Streaming on Netflix_
 {% include video.html id="lXZPMb51IQU" title="AK vs AK Trailer" %}
