updated link to the tbs part 2

--- a/_posts/tbs/2020-11-24-prologue.md
+++ b/_posts/tbs/2020-11-24-prologue.md
@@ -38,4 +38,4 @@ And this is going to become a recurring trope. Sometimes the problem comes in th
 
 Most of storytelling history can be summarised as above. It was either told, performed or written down in books. But the time from the Printing Revolution, to the Industrial Revolution and finally the Digital Revolution changed the storytelling landscape dramatically. It opened up new avenues to tell stories - many of which were unimaginable a while back. All that happened in the last 200 years and there were / are some cool tech behind it all. 
 
-I hope that the journey through this evolution will be exciting, interesting and hopefully informative. It will only be fitting to start this journey with one of the most important invention post the printing press. An invention that brought to life an important medium of storytelling - one that people thought was magic and downright impossible a few years prior - and also together, led to the creation of some crazy and revolutionary tech in the later years - **The Cinema and the Camera.**
+I hope that the journey through this evolution will be exciting, interesting and hopefully informative. It will only be fitting to start this journey with one of the most important invention post the printing press. An invention that brought to life an important medium of storytelling - one that people thought was magic and downright impossible a few years prior - and also together, led to the creation of some crazy and revolutionary tech in the later years - [**The Cinema and the Camera.**](/blog/tbs/visual-storytelling/)
